--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^9.17.1",
     "moment": "^2.29.4",
+    "pg": "^8.12.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "socket.io-client": "^4.6.0",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
@@ -43,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
