--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "socket.io-client": "^4.6.0",
